--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,8 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="coaching">Coaching</a></li>
-        <li class="dropdown">
+        <li class=" a1"><a href="coaching">Coaching</a></li>
+        <li class="dropdown a2">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="social-icons.html">Social Icons</a></li>
@@ -19,7 +19,7 @@
           <li><a href="list-styles.html">List Styles</a></li>
         </ul>
         </li>
-        <li class="dropdown" class="dropdown">
+        <li class="dropdown a3" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supporters<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="faq">FAQ</a></li>
@@ -31,7 +31,7 @@
           <li><a href="portfolio4.html">Recruitement and History</a></li>
         </ul>
         </li> 
-        <li class="dropdown" class="dropdown">
+        <li class="dropdown a4" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="faq">FAQ</a></li>
@@ -43,8 +43,8 @@
           <li><a href="portfolio4.html">Recruitement and History</a></li>
         </ul>
         </li> 
-        <li ><a href="blog">Blog</a></li>
-        <li ><a href="donate">Donate</a></li>
+        <li class="a5"><a href="blog">Blog</a></li>
+        <li class="a6"><a href="donate">Donate</a></li>
       </ul>
     </div>
   </div>
