--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -9,9 +9,13 @@
   src: url("243719_0_0.eot");
   src: url("243719_0_0.eot?#iefix") format("embedded-opentype"), url("243719_0_0.woff") format("woff"), url("243719_0_0.ttf") format("truetype"); }
 
+.pre-footer {
+  background: linear-gradient(45deg, #2290af, #10cba5 100%);
+  /* W3C */
+  height: 8px; }
+
 footer {
   background: #444c4e;
-  border-top: 8px solid #40bcd1;
   color: #7b7f80;
   padding-top: 40px;
   text-align: left;
