--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,9 +3,9 @@
     .section.cta-section
       .container
         %h1.text-center
-          Maximize Your Impact
+          You’ve got 80,000 hours to </br> make a difference. 
         %h2.text-center
-          You’ve got 80,000 hours to make a difference. Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the most difference.
+          Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the biggest impact.
         .row.buttons
           .col-md-4.col-md-offset-2
             %button.btn.btn-large.cta{href: "/"}
