--- a/app/assets/stylesheets/header2.css
+++ b/app/assets/stylesheets/header2.css
@@ -18,7 +18,7 @@
 header .logo img {
   max-width: 170px; }
 header ul.nav {
-  margin-top: 17px; }
+  margin-top: 22px; }
   header ul.nav .a1 a:hover {
     color: #00b5aa;
     border: 1px solid #00b5aa; }
@@ -38,13 +38,14 @@ header ul.nav {
     color: #00c3a6;
     border: 1px solid #00c3a6; }
   header ul.nav > li {
-    margin-left: 30px; }
+    margin-left: 24px; }
     header ul.nav > li > a {
       border: 1px solid rgba(0, 0, 0, 0);
       padding: 5px 10px;
-      font-size: 18px;
-      color: #666;
-      border-radius: 3px; }
+      font-size: 22px;
+      color: #777;
+      border-radius: 3px;
+      font-weight: 300; }
       header ul.nav > li > a .a2:hover {
         background: red; }
       header ul.nav > li > a:hover {
