--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,15 +6,18 @@
   .cta-section{
     //background: #306975; /* Old browsers */
     //background-image: url("/assets/front_page/patterns/test-10-large.png");
-    padding:30px 0 50px 0;
+    padding:45px 0 61px 0;
     h1{
       font-size:74px;
-      margin-bottom:70px;
+      margin-bottom:74px;
       color:white;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
     }
     h2{
-      color:#333;
+      color:#222;
       font-size:32px;
+      font-weight:400;
+      margin-bottom:56px;
     }
     .buttons{
       margin-top:40px;
