--- a/app/assets/stylesheets/header2.css
+++ b/app/assets/stylesheets/header2.css
@@ -18,40 +18,31 @@
 header .logo img {
   max-width: 170px; }
 header ul.nav {
-  margin-top: 22px; }
+  margin-top: 16px; }
   header ul.nav .a1 a:hover {
-    color: #00b5aa;
-    border: 1px solid #00b5aa; }
+    color: #00b5aa; }
   header ul.nav .a2 a:hover {
-    color: #00b8a9;
-    border: 1px solid #00b8a9; }
+    color: #00b8a9; }
   header ul.nav .a3 a:hover {
-    color: #00bba8;
-    border: 1px solid #00bba8; }
+    color: #00bba8; }
   header ul.nav .a4 a:hover {
-    color: #00bea7;
-    border: 1px solid #00bea7; }
+    color: #00bea7; }
   header ul.nav .a5 a:hover {
-    color: #00c2a7;
-    border: 1px solid #00c2a7; }
+    color: #00c2a7; }
   header ul.nav .a6 a:hover {
-    color: #00c3a6;
-    border: 1px solid #00c3a6; }
+    color: #00c3a6; }
   header ul.nav > li {
-    margin-left: 24px; }
+    margin-left: 24px;
+    font-family: 'Muli', sans-serif;
+    font-weight: 200; }
     header ul.nav > li > a {
       border: 1px solid rgba(0, 0, 0, 0);
       padding: 5px 10px;
       font-size: 22px;
       color: #777;
-      border-radius: 3px;
-      font-weight: 300; }
-      header ul.nav > li > a .a2:hover {
-        background: red; }
+      border-radius: 3px; }
       header ul.nav > li > a:hover {
-        color: white; }
-        header ul.nav > li > a:hover .a2, header ul.nav > li > a:hover .a3, header ul.nav > li > a:hover a5 {
-          background-color: #f00; }
+        background: none; }
     header ul.nav > li .dropdown-menu {
       box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.4);
       border: 1px solid #999;
@@ -64,6 +55,7 @@ header ul.nav {
     color: white; }
 
 header.navbar {
-  background: #eee;
+  background: #f6f6f6;
   padding: 20px 0 20px 0;
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+  box-shadow: 0 2px 1px rgba(50, 50, 50, 0.1); }
