--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -16,16 +16,18 @@
   .home .cta-section .buttons {
     margin-top: 40px; }
     .home .cta-section .buttons .cta {
+      font-family: 'Muli', sans-serif;
       font-size: 29px;
       padding: 19px;
       font-weight: 400;
-      background: rgba(255, 255, 255, 0.85);
-      color: #044; }
+      background: rgba(255, 255, 255, 0.8);
+      color: #377; }
       .home .cta-section .buttons .cta:hover {
-        background: rgba(50, 200, 200, 0.5); }
+        background: rgba(250, 250, 250, 0.5); }
 .home .people-say {
   padding: 38px 0 41px 0;
-  background: rgba(255, 255, 255, 0.85); }
+  background: rgba(255, 255, 255, 0.6);
+  box-shadow: inset 0 -2px 1px rgba(50, 50, 50, 0.1); }
   .home .people-say .profile {
     padding: 0 26px; }
     .home .people-say .profile p {
@@ -33,7 +35,8 @@
       font-size: 18px; }
     .home .people-say .profile h4 {
       font-size: 14px;
-      color: #000; }
+      color: #000;
+      font-family: 'Muli', sans-serif; }
     .home .people-say .profile img {
       width: 210px;
       margin-bottom: 18px; }
@@ -45,7 +48,8 @@
     margin-top: 59px;
     color: #222;
     border-bottom: 2px dashed #ccc;
-    padding-bottom: 15px; }
+    padding-bottom: 15px;
+    font-family: 'Muli', sans-serif; }
   .home .core-concepts .item {
     padding: 0 62px;
     text-align: center; }
@@ -59,7 +63,8 @@
       color: #666; }
 .home .affiliations {
   background: #eee;
-  padding: 65px 0 55px 0; }
+  padding: 65px 0 55px 0;
+  box-shadow: inset 0 2px 1px rgba(50, 50, 50, 0.1); }
   .home .affiliations hr {
     border-top: 2px solid #999; }
   .home .affiliations .organizations img {
