--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -22,20 +22,23 @@
     .buttons{
       margin-top:40px;
       .cta{
+        font-family: 'Muli', sans-serif;
         font-size:29px;
         padding:19px;
         font-weight: 400;
-        background: rgba(255,255,255,0.85);
-        color: #044;
+        background: rgba(255,255,255,0.8);
+
+        color: #377;
         &:hover{
-          background: rgba(50,200,200,0.5);
+          background: rgba(250, 250, 250, 0.5);
         }
       }
     }
   }
   .people-say{
     padding: 38px 0 41px 0;
-    background: rgba(255,255,255,0.85);
+    background: rgba(255,255,255,0.6);
+    box-shadow: inset 0 -2px 1px rgba(50,50,50,0.1);
     .profile{
       padding: 0 26px;
       p{
@@ -45,6 +48,7 @@
       h4{
         font-size:14px;
         color:#000;
+        font-family:'Muli', sans-serif;
       }
       img{
         width:210px;
@@ -62,6 +66,7 @@
       color: #222;
       border-bottom:2px dashed #ccc;
       padding-bottom:15px;
+      font-family: 'Muli', sans-serif;
     }
     .item{
       padding: 0 62px;
@@ -83,6 +88,7 @@
   .affiliations{
       background: #eee;
       padding: 65px 0 55px 0;
+      box-shadow: inset 0 2px 1px rgba(50,50,50,0.1);
     hr{
       border-top: 2px solid #999;
     }
