--- a/app/assets/stylesheets/header2.css
+++ b/app/assets/stylesheets/header2.css
@@ -16,7 +16,7 @@
 /*$pf: #ffaa00; // gold*/
 /*$magenta_2: #e30068;*/
 header .logo img {
-  max-width: 170px; }
+  max-width: 155px; }
 header ul.nav {
   margin-top: 16px; }
   header ul.nav .a1 a:hover {
@@ -32,14 +32,13 @@ header ul.nav {
   header ul.nav .a6 a:hover {
     color: #00c3a6; }
   header ul.nav > li {
-    margin-left: 24px;
     font-family: 'Muli', sans-serif;
     font-weight: 200; }
     header ul.nav > li > a {
       border: 1px solid rgba(0, 0, 0, 0);
-      padding: 5px 10px;
-      font-size: 22px;
-      color: #777;
+      padding: 5px 14px;
+      font-size: 18px;
+      color: #788;
       border-radius: 3px; }
       header ul.nav > li > a:hover {
         background: none; }
@@ -56,6 +55,38 @@ header ul.nav {
 
 header.navbar {
   background: #f6f6f6;
-  padding: 20px 0 20px 0;
+  padding: 12px 0 14px 0;
   margin-bottom: 0px;
   box-shadow: 0 2px 1px rgba(50, 50, 50, 0.1); }
+
+.sub-header {
+  background: linear-gradient(45deg, rgba(34, 144, 175, 0.9), rgba(16, 203, 165, 0.9));
+  min-height: 4px; }
+  .sub-header h1 {
+    font-family: 'Muli', sans-serif;
+    color: rgba(255, 255, 255, 0.85);
+    font-weight: 200;
+    margin-bottom: 16px;
+    margin-top: 16px;
+    font-size: 32px; }
+  .sub-header form {
+    margin-top: 17px; }
+  .sub-header input {
+    border: none;
+    font-size: 18px;
+    padding: 7px 7px 5px 13px;
+    color: white;
+    font-family: 'Muli', sans-serif;
+    font-weight: 100; }
+  .sub-header .submit {
+    background: none; }
+  .sub-header .search-query {
+    background-color: rgba(0, 0, 0, 0.15);
+    /* min-height: 45px; */
+    border-radius: 2px;
+    width: 312px; }
+    .sub-header .search-query:focus {
+      background-color: rgba(0, 0, 0, 0.21);
+      outline: none; }
+  .sub-header .search-query::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.7); }
