--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -62,7 +62,7 @@
       text-align: justify;
       color: #666; }
 .home .affiliations {
-  background: #eee;
+  background: #ccc;
   padding: 65px 0 55px 0;
   box-shadow: inset 0 2px 1px rgba(50, 50, 50, 0.1); }
   .home .affiliations hr {
