--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -86,7 +86,7 @@
     }
   }
   .affiliations{
-      background: #eee;
+      background: #ccc;
       padding: 65px 0 55px 0;
       box-shadow: inset 0 2px 1px rgba(50,50,50,0.1);
     hr{
