--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,22 @@
 
 <%= render :partial => "/layouts/header" %>
 
+<div class="sub-header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1> Blog and Research </h1>
+      </div>
+      <div class="col-md-5">
+        <form class='navbar-search pull-right' action='/search' method='get'>
+          <input class='search-query' name='q' placeholder='Find Research' type='text' />
+          <input type="submit" value="Submit" class="submit">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
   <div class="modal flash-modal" id="flash-modal">
     <div class="modal-body alert" id="flash-message"></div>
@@ -39,18 +55,19 @@
     </div>
   </div>
   <script type="text/javascript">
-    Flash.transferFromCookies();
-    Flash.writeDataTo('error', $('#flash-message'));
-    Flash.writeDataTo('notice', $('#flash-message'));
-    if ($("#flash-message").text().length > 0)
-      {
-        $(".flash-modal").modal('show');
-      }
-      else
-        {
-          $(".flash-modal").hide();
-        }
+Flash.transferFromCookies();
+Flash.writeDataTo('error', $('#flash-message'));
+Flash.writeDataTo('notice', $('#flash-message'));
+if ($("#flash-message").text().length > 0)
+  {
+    $(".flash-modal").modal('show');
+  }
+  else
+    {
+      $(".flash-modal").hide();
+    }
   </script>
+
   <section id="content">
     <%= yield %>
   </section>
