--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,40 +7,27 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav nav-pills pull-right">
-        <li class=" a1"><a href="coaching">Coaching</a></li>
-        <li class="dropdown a2">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="social-icons.html">Social Icons</a></li>
-          <li><a href="icons.html">Standard Icons</a></li>
-          <li><a href="icons_set2.html">Font Awesome Icons</a></li>
-          <li><a href="typography.html">Typography</a></li>
-          <li><a href="shortcodes.html">Shortcodes</a></li>
-          <li><a href="list-styles.html">List Styles</a></li>
-        </ul>
-        </li>
+        <li class="a1"><a href="coaching">Coaching</a></li>
+        <li class="a2"><a href="our-findings">Research</a></li>
+
         <li class="dropdown a3" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supporters<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="faq">FAQ</a></li>
-          <li><a href="portfolio4.html">Mission and History</a></li>
-          <li><a href="portfolio4.html">Endorsements</a></li>
-          <li><a href="portfolio4.html">Meet the Team</a></li>
-          <li><a href="portfolio4.html">Contact Us</a></li>
-          <li><a href="portfolio4.html">Media and History</a></li>
-          <li><a href="portfolio4.html">Recruitement and History</a></li>
+          <li><a href="members">Members</a></li>
+          <li><a href="endorsements">Endorsements</a></li>
+          <li><a href="local-chapters">Local Groups</a></li>
+          <li><a href="media">Media Coverage</a></li>
         </ul>
         </li> 
         <li class="dropdown a4" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
         <ul class="dropdown-menu">
+          <li><a href="about">About Us</a></li>
+          <li><a href="meet-the-team">Meet the Team</a></li>
+          <li><a href="recruitment">Work for Us</a></li>
+          <li><a href="volunteer"> Volunteer</a></li>
           <li><a href="faq">FAQ</a></li>
-          <li><a href="portfolio4.html">Mission and History</a></li>
-          <li><a href="portfolio4.html">Endorsements</a></li>
-          <li><a href="portfolio4.html">Meet the Team</a></li>
-          <li><a href="portfolio4.html">Contact Us</a></li>
-          <li><a href="portfolio4.html">Media and History</a></li>
-          <li><a href="portfolio4.html">Recruitement and History</a></li>
+          <li><a href="contact-us">Contact Us</a></li>
         </ul>
         </li> 
         <li class="a5"><a href="blog">Blog</a></li>
