--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,21 +31,17 @@
 
 <%= render :partial => "/layouts/header" %>
 
+<% if @title %>
 <div class="sub-header">
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1> Blog and Research </h1>
-      </div>
-      <div class="col-md-5">
-        <form class='navbar-search pull-right' action='/search' method='get'>
-          <input class='search-query' name='q' placeholder='Find Research' type='text' />
-          <input type="submit" value="Submit" class="submit">
-        </form>
+        <h1> <%= @title %> </h1>
       </div>
     </div>
   </div>
 </div>
+<% end %>
 
 <div class="container">
   <div class="modal flash-modal" id="flash-modal">
