team with more color

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,5 +1,11 @@
 .team{
-  h2{
+  .name{
     color: #45b4b3
+  }
+  h1{
+    color: #777;
+    font-weight:200;
+    margin-bottom:2px;
+    padding-bottom:0px;
   }
 }
