--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -1,2 +1,7 @@
-.team h2 {
+.team .name {
   color: #45b4b3; }
+.team h1 {
+  color: #777;
+  font-weight: 200;
+  margin-bottom: 2px;
+  padding-bottom: 0px; }
