--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,4 +1,12 @@
 .team{
+  .member{
+    margin:28px 0 10px 0;
+    img{
+      width:285px;
+      margin:auto;
+      display:block;
+    }
+  }
   .name{
     color: #45b4b3
   }
