--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -1,3 +1,9 @@
+.team .member {
+  margin: 28px 0 10px 0; }
+  .team .member img {
+    width: 285px;
+    margin: auto;
+    display: block; }
 .team .name {
   color: #45b4b3; }
 .team h1 {
