--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="about">About Us</a></li>
-          <li><a href="meet-the-team">Meet the Team</a></li>
+          <li><a href="meet_the_team">Meet the Team</a></li>
           <li><a href="recruitment">Work for Us</a></li>
           <li><a href="volunteer"> Volunteer</a></li>
           <li><a href="faq">FAQ</a></li>
