--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -1,75 +1,65 @@
 .team
+  %h1 Core Team
   .row
-    .col-md-5
+    .col-md-4.member
       .row
         .col-md-12
-          %img{align: "left", alt: "Benjamin Todd", src: "http://m1.idanoe.com/BenForWeb1.jpg"}/
+          %img{ alt: "Benjamin Todd", src: "http://m1.idanoe.com/BenForWeb1.jpg"}/
       .row
         .col-md-12
           %h2.name Benjamin Todd – Co-founder and Executive Director
-          %p Ben co-founded 80,000 Hours in 2011 while studying for a Masters in Physics and Philosophy at Oxford.
-          %p In under three years with Ben’s leadership, 80,000 Hours has grown from a student society, to an Oxford affiliated start-up with ten full-time staff, 900 members and features in TED, the Washington Post, the BBC Today Programme and more.
-          %p Outside of 80,000 Hours he has broad interests, and has published in Climate Physics and speaks Chinese. Before 80,000 Hours, he was the first and only undergraduate to intern as an analyst at top investment fund, Orbis. Rather than taking the job, he persuaded the Chairman to donate £60,000 to his start-up non-profit!
+          %p Ben co-founded 80,000 Hours in 2011 while studying for a Masters in Physics and Philosophy at Oxford.  In under three years with Ben’s leadership, 80,000 Hours has grown from a student society, to an Oxford affiliated start-up with ten full-time staff, 900 members.
+          %p Outside of 80,000 Hours he has published in Climate Physics and speaks Chinese. Before 80,000 Hours, he was the first and only undergraduate to intern as an analyst at top investment fund, Orbis. Rather than taking the job, he persuaded the Chairman to donate £60,000 to his start-up non-profit!
           %a{href: "mailto:benjamin.todd@80000hours.org"} benjamin.todd@80000hours.org
 
-    .col-md-4
+    .col-md-4.member
       .row
         .col-md-12
-          %img.image.small{align: "left", alt: "Will MacAskill", src: "http://m1.idanoe.com/WillForWeb1.jpg"}/
+          %img.image.small{ alt: "Will MacAskill", src: "http://m1.idanoe.com/WillForWeb1.jpg"}/
       .row
         .col-md-12
           %h2.name Will MacAskill – Co-founder and President
           %p In 2009, Will co-founded Giving What We Can, a leading charity evaluator that has advised the UK government and World Bank. In 2011, he co-founded 80,000 Hours with Ben. While a Fulbright Scholar, he writes a column in Atlantic spin-off Qz.com, gives 30% of his stipend to charity, and has published in top philosophy journal Ethics.
           %a{href: "mailto:will.macaskill@80000hours.org"} will.macaskill@80000hours.org
-    .col-md-3
+    .col-md-4.member
       .row
         .col-md-12
-          %img{align: "left", alt: "Roman Duda", src: "http://m1.idanoe.com/RomanForWeb1.jpg"}/
+          %img{ alt: "Jess Whittlestone", src: "http://m1.idanoe.com/JessForWeb1.jpg"}/
+      .row
+        .col-md-12
+          %h2.name Jess Whittlestone – Director of Communications
+          %p Jess works on communicating our content to the world, as well as leading and coordinating our careers advice. She has also written many of our most popular blog posts. She recently graduated from Oxford University with a First in Maths and Philosophy, and will begin a PhD in Behavioural Science at Warwick Business School in October.
+          %a{href: "mailto:jess.whittlestone@80000hours.org"} jess.whittlestone@80000hours.org
+  .row
+    .col-md-4.member
+      .row
+        .col-md-12
+          %img{ alt: "Roman Duda", src: "http://m1.idanoe.com/RomanForWeb1.jpg"}/
       .row
         .col-md-12
           %h2.name Roman Duda - Director of Content
           %p Roman did a fully-funded Masters in Philosophy at Oxford, during which he also consulted for a top 30 FTSE company on their business strategy, whilst also studying Mandarin Chinese. With a strong interest in Quantified Self, he has worked at the start-ups Memrise and Self Spark.
           %p He leads the management of the content development team, as well as our impact evaluation.
           %a{href: "mailto:roman.duda@80000hours.org"} roman.duda@80000hours.org
-  <hr>
-  .row
-    .col-md-3
+
+    .col-md-4.member
       .row
         .col-md-12
-          %img{align: "left", alt: "Tom Ash", src: "http://m1.idanoe.com/TomForWeb1.jpg"}/
+          %img{ alt: "Tom Ash", src: "http://m1.idanoe.com/TomForWeb1.jpg"}/
       .row
         .col-md-12
           %h2.name Tom Ash – Director of Operations
           %p Tom provides manages finances, legal and logistics shared 50% with Giving What We Can. After completing the BPhil in Philosophy at Oxford, he worked for 5 years as a professional web-developer at a variety of non-profits, including the New Internationalist.
 
-    .col-md-3
+    .col-md-4.member
       .row
         .col-md-12
-          %img{align: "left", alt: "Jess Whittlestone", src: "http://m1.idanoe.com/JessForWeb1.jpg"}/
-      .row
-        .col-md-12
-          %h2.name Jess Whittlestone – Director of Communications
-          %p Jess works on communicating our content to the world, as well as leading and coordinating our careers advice. She has also written many of our most popular blog posts. She recently graduated from Oxford University with a First in Maths and Philosophy, and will begin a PhD in Behavioural Science at Warwick Business School in October.
-          %a{href: "mailto:jess.whittlestone@80000hours.org"} jess.whittlestone@80000hours.org
-    .col-md-3
-      .row
-        .col-md-12
-          %img{align: "left", alt: "Isaac Lewis", src: "http://m1.idanoe.com/IsaacForWeb1.jpg"}/
+          %img{ alt: "Isaac Lewis", src: "http://m1.idanoe.com/IsaacForWeb1.jpg"}/
       .row
         .col-md-12
           %h2.name Isaac Lewis - Lead Web Developer
           %p Isaac recently graduated with a First in Computer Science from Warwick University. He works on improving our website and ensuring things run smoothly!
           %a{href: "mailto:isaac.lewis@80000hours.org"} isaac.lewis@80000hours.org
-    .col-md-3
-      .row
-        .col-md-12
-          %img{align: "left", alt: "Jen Brennan", src: "http://m1.idanoe.com/JenForWeb1.jpg"}/
-      .row
-        .col-md-12
-          %h2.name Jen Brennan - Brand Manager
-          %p Jen is currently studying for a degree in PPE at Oxford. She also runs her own website development company, which she started aged only 14! Jen works on our branding and website.
-          %a{href: "mailto:jen.brennan@80000hours.org"} jen.brennan@80000hours.org
-
   <hr>
   %h1#community Community
   .row
