improved uservoice module

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -5,7 +5,9 @@ a:hover {
   color: #003399; }
 
 #content {
-  padding-top: 20px; }
+  padding-top: 20px;
+  padding-bottom: 22px;
+  min-height: 400px; }
 
 h1, h2 {
   font-family: 'Muli', sans-serif; }
