--- a/app/views/pages/endorsements.html.haml
+++ b/app/views/pages/endorsements.html.haml
@@ -1,11 +1,13 @@
-- @endorsements.each do |e|
-  .endorsement
-    .body
-      = markdown e["body"]
-    .attribution
-      .author
-        = e["author"]
-      - if !e["position"].nil?
-        .position
-          = e["position"]
+.row
+  - @endorsements.each do |e|
+    .col-md-6
+      .endorsement
+        %blockquote<
+          = markdown e["body"]
+        .attribution
+          .author
+            = e["author"]
+          - if !e["position"].nil?
+            .position
+              = e["position"]
 
