getting header to work better

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,31 +7,31 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav nav-pills pull-right">
-        <li class="a1"><a href="coaching">Coaching</a></li>
-        <li class="a2"><a href="our-findings">Research</a></li>
+        <li class="a1"><a href="/coaching">Coaching</a></li>
+        <li class="a2"><a href="/our-findings">Research</a></li>
 
         <li class="dropdown a3" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supporters<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="members">Members</a></li>
-          <li><a href="endorsements">Endorsements</a></li>
-          <li><a href="local-chapters">Local Groups</a></li>
-          <li><a href="media">Media Coverage</a></li>
+          <li><a href="/members">Members</a></li>
+          <li><a href="/endorsements">Endorsements</a></li>
+          <li><a href="/local-chapters">Local Groups</a></li>
+          <li><a href="/media">Media Coverage</a></li>
         </ul>
         </li> 
         <li class="dropdown a4" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="about">About Us</a></li>
-          <li><a href="meet_the_team">Meet the Team</a></li>
-          <li><a href="recruitment">Work for Us</a></li>
-          <li><a href="volunteer"> Volunteer</a></li>
-          <li><a href="faq">FAQ</a></li>
-          <li><a href="contact-us">Contact Us</a></li>
+          <li><a href="/about">About Us</a></li>
+          <li><a href="/meet_the_team">Meet the Team</a></li>
+          <li><a href="/recruitment">Work for Us</a></li>
+          <li><a href="/volunteer"> Volunteer</a></li>
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/contact-us">Contact Us</a></li>
         </ul>
         </li> 
-        <li class="a5"><a href="blog">Blog</a></li>
-        <li class="a6"><a href="donate">Donate</a></li>
+        <li class="a5"><a href="/blog">Blog</a></li>
+        <li class="a6"><a href="/donate">Donate</a></li>
       </ul>
     </div>
   </div>
