changed header image to be correct size

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <div class="logo">
-        <%= link_to image_tag('/assets/header/variations/3.png'), '/', id: 'header-logo' %>
+        <%= link_to image_tag('/assets/header/medium.png'), '/', id: 'header-logo' %>
       </div>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
