--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -30,22 +30,7 @@
 <body style="background:#eee">
 
 <%= render :partial => "/layouts/header" %>
-
-<div class="sub-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h1> Blog and Research </h1>
-      </div>
-      <div class="col-md-5">
-        <form class='navbar-search pull-right' action='/search' method='get'>
-          <input class='search-query' name='q' placeholder='Find Research' type='text' />
-          <input type="submit" value="Submit" class="submit">
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "layouts/subheader" %>
 
 <div class="container">
   <div class="modal flash-modal" id="flash-modal">
