--- a/app/views/layouts/open.html.erb
+++ b/app/views/layouts/open.html.erb
@@ -30,6 +30,7 @@
 <body>
 
 <%= render :partial => "/layouts/header" %>
+<%= render :partial => "layouts/subheader" %>
 
 <div class="container">
   <div class="modal flash-modal" id="flash-modal">
