--- a/app/views/layouts/_subheader.html.erb
+++ b/app/views/layouts/_subheader.html.erb
@@ -1,19 +1,17 @@
 <% if @title %>
   <div class="sub-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h1> <%= @title %> </h1>
+    <div class="container">
+      <div class="row">
+
+        <% if @subheader == 'Coaching' %>
+          <%= render :partial => "/layouts/subheaders/coaching.html" %>
+        <% elsif @subheader_search == true %>
+          <%= render :partial => "/layouts/subheaders/search.html.erb" %>
+        <% else %>
+          <%= render :partial => "/layouts/subheaders/standard.html" %>
+        <% end %>
+
       </div>
-      <% if @subheader_search == true %>
-        <div class="col-md-5">
-        <form class='navbar-search pull-right' action='/search' method='get'>
-          <input class='search-query' name='q' placeholder='Find Research' type='text' />
-          <input type="submit" value="Submit" class="submit">
-        </form>
-      </div>
-    <% end %>
     </div>
   </div>
-</div>
 <% end %>
