--- a/app/views/pages/coaching_overview.html.haml
+++ b/app/views/pages/coaching_overview.html.haml
@@ -1,39 +1,46 @@
-.row
-
-  .col-sm-6
-    %p
-      You probably have many options open to you, and in some you’ll have far more impact than others. It can be tough to know which to choose. 
-    %p
-      We’re the only people in the world who specialise in helping you work out how to maximise your social impact: finding out how to improve the lives of as many people as possible, in the biggest ways, over the long-term.
-  .col-sm-6
-    = image_tag("/assets/pages/coaching/collin-coaching2.png")
-<hr>
-.row
-  .col-sm-3
-    .text-center
-      = image_tag("/assets/front_page/icons/blue/272.png")
-      %h3
-        One-to-one meetings
-    %p
-      We'll have a few 1-2 hour meetings to get to know you and understand your concerns.  
-  .col-sm-3
-    .text-center
-      = image_tag("/assets/front_page/icons/blue/272.png")
-      %h3
-        Individualised research
-    %p 
-      Our staff will spend several hours researching the literature behind each of your main career options to help you make the best choice.
-  .col-sm-3
-    .text-center
-      = image_tag("/assets/front_page/icons/blue/272.png")
-      %h3
-        Personal documentation
-    %p 
-      We'll document all of our discussions and research in our Case Studies, which will be accessible to the entire community.
-  .col-sm-3
-    .text-center
-      = image_tag("/assets/front_page/icons/blue/272.png")
-      %h3
-        The Altruist Community
-    %p 
-      If reasonable, we'll match you with others of similar values that may be able to help you in your personal journey.
+.coaching-page
+  .back-large
+    .container
+      .row
+        .col-sm-6
+          .summary
+            %h2
+              You probably have many options open to you, and in some you’ll have far more impact than others. It can be tough to know which to choose. 
+            %h2
+              We’re the only people in the world who specialise in helping you work out how to maximise your social impact: finding out how to improve the lives of as many people as possible, in the biggest ways, over the long-term.
+            .buttons
+              = link_to 'Information', '/coaching/information', :class => 'btn btn-large btn-default'
+              = link_to 'Application', '/coaching/application', :class => 'btn btn-large btn-default'
+        .col-sm-6
+          = image_tag("/assets/pages/coaching/collin-coaching2.png")
+  .items
+    .container
+      .row
+        .col-sm-3.item
+          .text-center
+            = image_tag("/assets/pages/coaching/icons/165.png")
+            %h2
+              One-to-one Meetings
+          %p
+            We'll have a few 1-2 hour meetings to get to know you and understand your concerns.  
+        .col-sm-3.item
+          .text-center
+            = image_tag("/assets/pages/coaching/icons/272.png")
+            %h2
+              Individualised Research
+          %p 
+            Our staff will spend several hours researching the literature behind each of your main career options to help you make the best choice.
+        .col-sm-3.item
+          .text-center
+            = image_tag("/assets/pages/coaching/icons/124.png")
+            %h2
+              Personal Documentation
+          %p 
+            We'll document all of our discussions and research in our Case Studies, which will be accessible to the entire community.
+        .col-sm-3.item
+          .text-center
+            = image_tag("/assets/pages/coaching/icons/152.png")
+            %h2
+              The Altruist Community
+          %p 
+            If reasonable, we'll match you with others of similar values that may be able to help you in your personal journey.
