--- a/app/views/layouts/subheaders/_coaching.html.erb
+++ b/app/views/layouts/subheaders/_coaching.html.erb
@@ -1,11 +1,10 @@
-<div class="col-md-7">
-  <h1> Social Impact Coaching </h1>
-</div>
-<% if @subheader_search == true %>
+<div class="coaching-navigation">
   <div class="col-md-5">
-  <form class='navbar-search pull-right' action='/search' method='get'>
-    <input class='search-query' name='q' placeholder='Find Research' type='text' />
-    <input type="submit" value="Submit" class="submit">
-  </form>
+    <h1> <%= link_to 'Social Impact Coaching', '/coaching/overview' %> </h1>
+  </div>
+  <div class="col-md-7, coaching-navigation">
+    <h2> <%= link_to 'Application', '/coaching/application' %> </h2>
+    <h2> <%= link_to 'Information', '/coaching/information' %> </h2>
+    <h2> <%= link_to 'Overview', '/coaching/overview' %> </h2>
+  </div>
 </div>
-      <% end %>
