--- a/app/views/pages/coaching_application.html.haml
+++ b/app/views/pages/coaching_application.html.haml
@@ -1,4 +1,4 @@
-.row
+.row.coaching-info-page
   .col-md-7
     %h2 What we're looking for
     %p 
@@ -9,6 +9,8 @@
       %li Read our recommended material first
       %li Commit to at least 15 hours of researching your own career during our coaching week
       %li Provide extensive feedback and recommendations on how we're doing.  We're serious about becoming better and need your help for this.
+    = link_to 'Apply Now', '/request-a-career-advice-session', :class => 'btn btn-large btn-primary'
+      
   .col-md-1
   .col-md-4
     .sidebar-image
