--- a/app/views/pages/coaching_information.html.haml
+++ b/app/views/pages/coaching_information.html.haml
@@ -1,4 +1,4 @@
-.row
+.row.coaching-info-page
   .col-md-7
     %h2 What we can do
     %p Comparing several options and wondering where, given your personal situation, you can make the most impact? It’s likely that one of your options has far more potential than the others. We’ll help you decide. First, we’ll help you create a list of important factors, then we’ll gather data and interview experts to assess them. We’ll introduce you to other people who have been in your shoes before.
