--- a/app/views/career_advice_requests/new.html.haml
+++ b/app/views/career_advice_requests/new.html.haml
@@ -64,3 +64,7 @@
 
         = f.button :submit, "Request session", :"data-loading-text" => "Please wait..."
       
+  .col-md-1
+  .col-md-4
+    .sidebar-image
+      = image_tag("/assets/pages/coaching/collin-coaching.png")
