fixed issue with application page

--- a/app/views/career_advice_requests/new.html.haml
+++ b/app/views/career_advice_requests/new.html.haml
@@ -1,38 +1,8 @@
-.row
-  .col-md-7
-    %h1 Career advice session
+.row.request_application
+  .col-md-9
     %p 
       :markdown
         If you’re interested in having a big impact with your life, we’d like to help you! Use the form below to ask to speak to one of our advisers.
-
-        ##What happens in an advice session?
-
-        A member of our research team will speak to you on Skype or at our offices in Oxford. First, they’ll aim to understand your situation and career problems. Then they’ll help you to apply our research on careers to your situation.
-
-        ##Who will benefit most from our advice?
-
-        Do you care about making a big positive impact with your career, and want to use the latest evidence to increase the scale of your impact? If yes, then we can help.
-
-        A few warnings:
-
-        * Our expertise lies in helping you find ways to have a big positive impact with your career. We don’t have special expertise on issues covered by standard career advice, like how to write a CV.
-        * We take an evidence-based approach, so you should be comfortable occasionally using quantitative methods to analyse your options.
-        * You’ll get the most out of us if you’re open minded and happy to consider lots of different options.
-
-        For more on how our approach is different, see [our features](/our-features)
-
-        ##Our Knowledge
-
-        Our research team carries out world-leading research on how to rationally analyse career options in terms of impact. We do this by summarising the latest academic research relevant to these questions and applying it. To assist us, we collaborate with academics at the University of Oxford and world-leading charity cost-effectiveness analysts (such as our sister organisation [Giving What We Can](http://www.givingwhatwecan.org)). We’re also building up an extensive knowledge of standard career advice and facts. Despite being new, we’ve already helped hundreds of people to better understand their careers.
-        
-
-        ##What preparation should I do?
-
-        * Try to clarify your career blocking points as much as possible
-        * Glance over our [basic career advice content](http://80000hours.org/career-advice)
-        * Check our [blog](/blog) by searching, looking at our tag cloud or seeing our [archive](/career-research) for articles relevant to your situation
-
-
         Please also note that our advice service is currently in a trial phase. One thing this means is that we sometimes run out of capacity, and we won’t always be able to give you a session. We apologise in advance if this is the case.
       
 
@@ -64,7 +34,6 @@
 
         = f.button :submit, "Request session", :"data-loading-text" => "Please wait..."
       
-  .col-md-1
-  .col-md-4
+  .col-md-3
     .sidebar-image
       = image_tag("/assets/pages/coaching/collin-coaching.png")
