--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav nav-pills pull-right">
-        <li class="a1"><a href="/coaching">Coaching</a></li>
+        <li class="a1"><a href="/coaching/overview">Coaching</a></li>
         <li class="a2"><a href="/our-findings">Research</a></li>
 
         <li class="dropdown a3" class="dropdown">
